<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/calendar_dialog_holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="@dimen/activity_margin"
        android:paddingTop="@dimen/activity_margin"
        android:paddingEnd="@dimen/activity_margin">

        <org.fossify.commons.views.MyTextInputLayout
            android:id="@+id/type_title_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_margin"
            android:hint="@string/title">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/type_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapSentences"
                android:maxLength="80"
                android:singleLine="true"
                android:textCursorDrawable="@null"
                android:textSize="@dimen/bigger_text_size" />

        </org.fossify.commons.views.MyTextInputLayout>

        <org.fossify.commons.views.MyTextView
            android:id="@+id/type_color_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_margin"
            android:text="@string/color" />

        <ImageView
            android:id="@+id/type_color"
            android:layout_width="@dimen/color_sample_size"
            android:layout_height="@dimen/color_sample_size"
            android:layout_marginStart="@dimen/small_margin"
            android:layout_marginTop="@dimen/medium_margin" />

        <org.fossify.commons.views.MyTextView
            android:id="@+id/type_background_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_margin"
            android:layout_marginTop="@dimen/activity_margin"
            android:text="@string/theme_category_background" />

        <ImageView
            android:id="@+id/type_background_color"
            android:layout_width="@dimen/color_sample_size"
            android:layout_height="@dimen/color_sample_size"
            android:layout_marginStart="@dimen/small_margin"
            android:layout_marginTop="@dimen/medium_margin" />

        <RelativeLayout
            android:id="@+id/type_font_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_margin"
            android:background="?attr/selectableItemBackground"
            android:paddingTop="@dimen/medium_margin"
            android:paddingBottom="@dimen/medium_margin">

            <org.fossify.commons.views.MyTextView
                android:id="@+id/type_font_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:text="@string/theme_font" />

            <org.fossify.commons.views.MyTextView
                android:id="@+id/type_font_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:textSize="@dimen/smaller_text_size"
                tools:text="System default" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/type_weight_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:paddingTop="@dimen/medium_margin"
            android:paddingBottom="@dimen/medium_margin">

            <org.fossify.commons.views.MyTextView
                android:id="@+id/type_weight_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:text="@string/theme_weight" />

            <org.fossify.commons.views.MyTextView
                android:id="@+id/type_weight_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:textSize="@dimen/smaller_text_size"
                tools:text="Default" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/type_size_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:paddingTop="@dimen/medium_margin"
            android:paddingBottom="@dimen/medium_margin">

            <org.fossify.commons.views.MyTextView
                android:id="@+id/type_size_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:text="@string/theme_size" />

            <org.fossify.commons.views.MyTextView
                android:id="@+id/type_size_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:textSize="@dimen/smaller_text_size"
                tools:text="Default" />

        </RelativeLayout>

        <org.fossify.commons.views.MyTextView
            android:id="@+id/type_sample"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_margin"
            android:padding="@dimen/small_margin"
            android:textSize="@dimen/bigger_text_size"
            tools:text="Sample" />

    </LinearLayout>

</ScrollView>
