<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/theme_text_holder"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <!-- header: element name + color swatch (tap → color picker) -->
    <RelativeLayout
        android:id="@+id/theme_text_color_row"
        style="@style/SettingsHolderTextViewOneLinerStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <org.fossify.commons.views.MyTextView
            android:id="@+id/theme_text_label"
            style="@style/SettingsTextLabelStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@+id/theme_text_color_preview" />

        <ImageView
            android:id="@+id/theme_text_color_preview"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="14dp"
            android:background="@drawable/circle_background"
            android:importantForAccessibility="no" />

    </RelativeLayout>

    <!-- font (tap → font picker) -->
    <RelativeLayout
        android:id="@+id/theme_text_font_row"
        style="@style/SettingsHolderTextViewOneLinerStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/medium_margin">

        <org.fossify.commons.views.MyTextView
            android:id="@+id/theme_text_font_title"
            style="@style/SettingsTextLabelStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:text="@string/theme_font" />

        <org.fossify.commons.views.MyTextView
            android:id="@+id/theme_text_font_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/normal_margin"
            android:layout_marginEnd="14dp" />

    </RelativeLayout>

    <!-- weight (tap → weight picker) -->
    <RelativeLayout
        android:id="@+id/theme_text_weight_row"
        style="@style/SettingsHolderTextViewOneLinerStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/medium_margin">

        <org.fossify.commons.views.MyTextView
            android:id="@+id/theme_text_weight_title"
            style="@style/SettingsTextLabelStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:text="@string/theme_weight" />

        <org.fossify.commons.views.MyTextView
            android:id="@+id/theme_text_weight_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/normal_margin"
            android:layout_marginEnd="14dp" />

    </RelativeLayout>

    <!-- size slider -->
    <LinearLayout
        android:id="@+id/theme_text_size_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/medium_margin"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="@dimen/activity_margin"
        android:paddingTop="@dimen/small_margin"
        android:paddingEnd="@dimen/activity_margin"
        android:paddingBottom="@dimen/small_margin">

        <org.fossify.commons.views.MyTextView
            android:id="@+id/theme_text_size_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/theme_size" />

        <SeekBar
            android:id="@+id/theme_text_size_seekbar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/normal_margin"
            android:layout_marginEnd="@dimen/normal_margin"
            android:layout_weight="1" />

        <org.fossify.commons.views.MyTextView
            android:id="@+id/theme_text_size_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:minWidth="64dp" />

    </LinearLayout>

    <!-- live sample (font + weight + size + color) -->
    <org.fossify.commons.views.MyTextView
        android:id="@+id/theme_text_sample"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/medium_margin"
        android:paddingStart="@dimen/activity_margin"
        android:paddingEnd="@dimen/activity_margin"
        android:paddingBottom="@dimen/normal_margin" />

</LinearLayout>
